--- a/Views/equipe/Index.cshtml
+++ b/Views/equipe/Index.cshtml
@@ -6,6 +6,20 @@
 
 <h1>Tela de Equipes</h1>
 
+<form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+    <div class="form-group">
+        <label for="">Nome</label>
+        <input type="text" name="Nome">
+    </div>
+
+    <div class="form-group">
+        <label for="">Imagem</label>
+        <input type="file" name="Imagem">
+    </div>
+
+    <button type="submit" value="Upload" class="btn btn-primary">Cadastrar</button>
+</form>
+
 <table class="table table-striped table-responsive">
     <thead>
         <th>ID</th>
@@ -19,10 +33,10 @@
             <tr>
                 <td>@equipe.IdEquipe</td>
                 <td>@equipe.Nome</td>
-                <td>@equipe.Imagem</td>
+                <td> <img src="@equipe.Imagem" alt=""> </td>
             </tr>
         }
 
     </tbody>
-    
+
 </table>
