--- a/Views/equipe/Index.cshtml
+++ b/Views/equipe/Index.cshtml
@@ -7,17 +7,17 @@
 <h1>Tela de Equipes</h1>
 
 <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-    <div class="form-group">
+    <div>
         <label for="">Nome</label>
-        <input type="text" name="Nome">
+        <input type="text" name="Nome" required>
     </div>
 
-    <div class="form-group">
+    <div>
         <label for="">Imagem</label>
         <input type="file" name="Imagem">
     </div>
 
-    <button type="submit" value="Upload" class="btn btn-primary">Cadastrar</button>
+    <button type="submit" value="Upload">Cadastrar</button>
 </form>
 
 <table class="table table-striped table-responsive">
@@ -25,6 +25,8 @@
         <th>ID</th>
         <th>Nome</th>
         <th>Imagem</th>
+        <th>Excluir</th>
+        <th>Editar</th>
     </thead>
 
     <tbody>
@@ -33,7 +35,15 @@
             <tr>
                 <td>@equipe.IdEquipe</td>
                 <td>@equipe.Nome</td>
-                <td> <img src="@equipe.Imagem" alt=""> </td>
+                <td>
+                    <img src="/img/Equipes/@equipe.Imagem" width="50px" height="50px" alt="Imagem da equipe @equipe.Nome">
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id = "@equipe.IdEquipe">Excluir</a>
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id = "@equipe.IdEquipe">Editar</a>
+                </td>
             </tr>
         }
 
