--- a/Views/jogador/Index.cshtml
+++ b/Views/jogador/Index.cshtml
@@ -35,6 +35,7 @@
 
 <table class="table table-striped table-responsive">
     <thead>
+        <th>ID</th>
         <th>Nome</th>
         <th>Email</th>
         <th>Equipe</th>
@@ -47,10 +48,19 @@
         @foreach (Jogador jogador in ViewBag.Jogador)
         {
             <tr>
+                <td>@jogador.IdJogador</td>
                 <td>@jogador.Nome</td>
                 <td>@jogador.Email</td>
                 <td>@jogador.Equipe.Nome</td>
-                <td> <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt=""></td>
+                <td>
+                    <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                </td>
+                <td>
+                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
+                </td>
             </tr>
         }
     </tbody>
