--- a/Views/equipe/Index.cshtml
+++ b/Views/equipe/Index.cshtml
@@ -6,47 +6,57 @@
 
 <h1>Tela de Equipes</h1>
 
-<form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-    <div>
-        <label for="">Nome</label>
-        <input type="text" name="Nome" required>
-    </div>
+@if (ViewBag.UserName == null)
+{
+    <a asp-area="" asp-controller="Login" asp-action="Index">
+        Login
+    </a>
+}
+else
+{
 
-    <div>
-        <label for="">Imagem</label>
-        <input type="file" name="Imagem">
-    </div>
+    <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+        <div>
+            <label for="">Nome</label>
+            <input type="text" name="Nome" required>
+        </div>
 
-    <button type="submit" value="Upload">Cadastrar</button>
-</form>
+        <div>
+            <label for="">Imagem</label>
+            <input type="file" name="Imagem">
+        </div>
 
-<table class="table table-striped table-responsive">
-    <thead>
-        <th>ID</th>
-        <th>Nome</th>
-        <th>Imagem</th>
-        <th>Excluir</th>
-        <th>Editar</th>
-    </thead>
+        <button type="submit" value="Upload">Cadastrar</button>
+    </form>
 
-    <tbody>
-        @foreach (Equipe equipe in ViewBag.Equipe)
-        {
-            <tr>
-                <td>@equipe.IdEquipe</td>
-                <td>@equipe.Nome</td>
-                <td>
-                    <img src="/img/Equipes/@equipe.Imagem" width="50px" height="50px" alt="Imagem da equipe @equipe.Nome">
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id = "@equipe.IdEquipe">Excluir</a>
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id = "@equipe.IdEquipe">Editar</a>
-                </td>
-            </tr>
-        }
+    <table class="table table-striped table-responsive">
+        <thead>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Imagem</th>
+            <th>Excluir</th>
+            <th>Editar</th>
+        </thead>
 
-    </tbody>
+        <tbody>
+            @foreach (Equipe equipe in ViewBag.Equipe)
+            {
+                <tr>
+                    <td>@equipe.IdEquipe</td>
+                    <td>@equipe.Nome</td>
+                    <td>
+                        <img src="/img/Equipes/@equipe.Imagem" width="50px" height="50px" alt="Imagem da equipe @equipe.Nome">
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe">Excluir</a>
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id="@equipe.IdEquipe">Editar</a>
+                    </td>
+                </tr>
+            }
 
-</table>
+        </tbody>
+
+    </table>
+}
