--- a/Views/jogador/Index.cshtml
+++ b/Views/jogador/Index.cshtml
@@ -6,63 +6,73 @@
 
 <h1>Tela de Jogadores</h1>
 
-<form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-    <div>
-        <label for="">Nome</label>
-        <input type="text" name="Nome" required>
-    </div>
+@if (ViewBag.UserName == null)
+{
+    <a asp-area="" asp-controller="Login" asp-action="Index">
+        Login
+    </a>
+}
+else
+{
 
-    <div>
-        <label for="">Email</label>
-        <input type="text" name="Email" required>
-    </div>
+    <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+        <div>
+            <label for="">Nome</label>
+            <input type="text" name="Nome" required>
+        </div>
 
-    <div>
-        <label for="">Senha</label>
-        <input type="password" name="Senha" required>
-    </div>
+        <div>
+            <label for="">Email</label>
+            <input type="text" name="Email" required>
+        </div>
 
-    <label for="">Equipe</label>
-    <select name="Equipe" id="">
-        @foreach (Equipe equipe in ViewBag.Equipe)
-        {
-            <option>@equipe.Nome</option>
-        }
-    </select>
+        <div>
+            <label for="">Senha</label>
+            <input type="password" name="Senha" required>
+        </div>
 
-    <button type="submit" value="Upload">Cadastrar</button>
-</form>
+        <label for="">Equipe</label>
+        <select name="Equipe" id="">
+            @foreach (Equipe equipe in ViewBag.Equipe)
+            {
+                <option>@equipe.Nome</option>
+            }
+        </select>
 
-<table class="table table-striped table-responsive">
-    <thead>
-        <th>ID</th>
-        <th>Nome</th>
-        <th>Email</th>
-        <th>Equipe</th>
-        <th>Imagem</th>
-        <th>Editar</th>
-        <th>Excluir</th>
-    </thead>
+        <button type="submit" value="Upload">Cadastrar</button>
+    </form>
 
-    <tbody>
-        @foreach (Jogador jogador in ViewBag.Jogador)
-        {
-            <tr>
-                <td>@jogador.IdJogador</td>
-                <td>@jogador.Nome</td>
-                <td>@jogador.Email</td>
-                <td>@jogador.Equipe.Nome</td>
-                <td>
-                    <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
-                </td>
-                <td>
-                    <a asp-area="" asp-controller="Jogador" asp-action="Excluir" asp-route-id="@jogador.IdJogador">Excluir</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <table class="table table-striped table-responsive">
+        <thead>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>Email</th>
+            <th>Equipe</th>
+            <th>Imagem</th>
+            <th>Editar</th>
+            <th>Excluir</th>
+        </thead>
 
+        <tbody>
+            @foreach (Jogador jogador in ViewBag.Jogador)
+            {
+                <tr>
+                    <td>@jogador.IdJogador</td>
+                    <td>@jogador.Nome</td>
+                    <td>@jogador.Email</td>
+                    <td>@jogador.Equipe.Nome</td>
+                    <td>
+                        <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+                    </td>
+                    <td>
+                        <a asp-area="" asp-controller="Jogador" asp-action="Excluir"
+                            asp-route-id="@jogador.IdJogador">Excluir</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
