--- a/Views/equipe/Index.cshtml
+++ b/Views/equipe/Index.cshtml
@@ -6,6 +6,7 @@
 
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,35 +15,33 @@
     <link rel="stylesheet" href="~/css/equipes.css">
 </head>
 
-@if (ViewBag.UserName == null)
+@if (ViewBag.Login == null)
 {
-    <a asp-area="" asp-controller="Login" asp-action="Index">
-        Login
-    </a>
+    <a asp-area="" asp-controller="Login" asp-action="Index">Login</a>
 }
 else
-{
-    
+{ 
+<body>
+    <main>
         <section class="container-grid cadastro-equipes">
 
-            <form action="" class="frm-cad-equipe" method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+            <form class="frm-cad-equipe" method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
                 <div class="cadequipe-titulo">
                     <h1>Cadastro de Equipes</h1>
                     <hr>
                 </div>
 
-               
-                <input class="campo-entrada" type="text" placeholder="Digite o nome da sua equipe:" name="Nome" required>
+
+                <input class="campo-entrada" type="text" placeholder="Digite o nome da sua equipe:" name="Nome"
+                    required>
                 <label class="foto" for="foto-file">
                     Nenhuma imagem selecionada...
-                    <input type="file" id="foto-file" name="Imagem">
+                    <input type="file" id="foto-file" name="Imagem" accept="image/png, image/jpeg">
                 </label>
 
                 <button type="submit" value="Upload">Cadastro</button>
 
             </form>
-
-            <!-- TABELA CADASTRO DE EQUIPES -->
 
             <table>
                 <thead>
@@ -76,87 +75,89 @@ else
                 </tbody>
             </table>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    @* <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-        <div>
-            <label for="">Nome</label>
-            <input type="text" name="Nome" required>
-        </div>
-
-        <div>
-            <label for="">Imagem</label>
-            <input type="file" name="Imagem">
-        </div>
-
-        <button type="submit" value="Upload">Cadastrar</button>
-    </form>
-
-    <table class="table table-striped table-responsive">
-        <thead>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Imagem</th>
-            <th>Excluir</th>
-            <th>Editar</th>
-        </thead>
-
-        <tbody>
-            @foreach (Equipe equipe in ViewBag.Equipe)
-            {
-                <tr>
-                    <td>@equipe.IdEquipe</td>
-                    <td>@equipe.Nome</td>
-                    <td>
-                        <img src="/img/Equipes/@equipe.Imagem" width="50px" height="50px" alt="Imagem da equipe @equipe.Nome">
-                    </td>
-                    <td>
-                        <a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe">Excluir</a>
-                    </td>
-                    <td>
-                        <a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id="@equipe.IdEquipe">Editar</a>
-                    </td>
-                </tr>
-            }
-
-        </tbody>
-
-    </table> *@
+    </main>
+</body>
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@* <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+<div>
+<label for="">Nome</label>
+<input type="text" name="Nome" required>
+</div>
+
+<div>
+<label for="">Imagem</label>
+<input type="file" name="Imagem" accept="image/png, image/jpeg">
+</div>
+
+<button type="submit" value="Upload">Cadastrar</button>
+</form>
+
+<table class="table table-striped table-responsive">
+<thead>
+<th>ID</th>
+<th>Nome</th>
+<th>Imagem</th>
+<th>Excluir</th>
+<th>Editar</th>
+</thead>
+
+<tbody>
+@foreach (Equipe equipe in ViewBag.Equipe)
+{
+<tr>
+<td>@equipe.IdEquipe</td>
+<td>@equipe.Nome</td>
+<td>
+<img src="/img/Equipes/@equipe.Imagem" width="50px" height="50px" alt="Imagem da equipe @equipe.Nome">
+</td>
+<td>
+<a asp-area="" asp-controller="Equipe" asp-action="Excluir" asp-route-id="@equipe.IdEquipe">Excluir</a>
+</td>
+<td>
+<a asp-area="" asp-controller="Equipe" asp-action="Editar" asp-route-id="@equipe.IdEquipe">Editar</a>
+</td>
+</tr>
+}
+
+</tbody>
+
+</table>
+*@
