--- a/Views/jogador/Index.cshtml
+++ b/Views/jogador/Index.cshtml
@@ -3,76 +3,147 @@
 @{
     ViewData["Title"] = "Jogador";
 }
+<!DOCTYPE html>
+<html lang="pt-BR">
 
-<h1>Tela de Jogadores</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jogadores</title>
+    <link rel="stylesheet" href="~/css/reset-and-basics.css">
+    <link rel="stylesheet" href="~/css/jogadores.css">
+</head>
 
-@if (ViewBag.UserName == null)
+@if (ViewBag.Login == null)
 {
-    <a asp-area="" asp-controller="Login" asp-action="Index">
-        Login
-    </a>
+    <a asp-area="" asp-controller="Login" asp-action="Index">Login</a>
 }
 else
 {
+    <main>
+        <section class="container-grid cadastro-equipes">
 
-    <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
-        <div>
-            <label for="">Nome</label>
-            <input type="text" name="Nome" required>
-        </div>
 
-        <div>
-            <label for="">Email</label>
-            <input type="text" name="Email" required>
-        </div>
+            <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data" class="frm-cad-equipe">
+                <div class="cadequipe-titulo">
+                    <h1>Cadastro de Jogadores</h1>
+                    <hr>
+                </div>
 
-        <div>
-            <label for="">Senha</label>
-            <input type="password" name="Senha" required>
-        </div>
 
-        <label for="">Equipe</label>
-        <select name="Equipe" id="">
-            @foreach (Equipe equipe in ViewBag.Equipe)
-            {
-                <option>@equipe.Nome</option>
-            }
-        </select>
+                <input class="campo-entrada" type="text" id="nome-jogador" name="Nome"
+                    placeholder="Digite o nome do Jogador:" required>
+                <input class="campo-entrada" type="email" id="email-jogador" name="Email"
+                    placeholder="Digite o Email do Jogador:" required>
+                <input class="campo-entrada" type="password" id="senha" name="Senha" placeholder="Digite a Senha:" required>
 
-        <button type="submit" value="Upload">Cadastrar</button>
-    </form>
+                <select class="campo-entrada" id="equipe-select" name="Equipe">
+                    <option value="">Selecione uma Equipe</option>
+                    @foreach (Equipe equipe in ViewBag.Equipe)
+                    {
+                        <option>@equipe.Nome</option>
+                    }
+                </select>
 
-    <table class="table table-striped table-responsive">
-        <thead>
-            <th>ID</th>
-            <th>Nome</th>
-            <th>Email</th>
-            <th>Equipe</th>
-            <th>Imagem</th>
-            <th>Editar</th>
-            <th>Excluir</th>
-        </thead>
+                <button type="submit" value="Upload">Cadastrar</button>
 
-        <tbody>
-            @foreach (Jogador jogador in ViewBag.Jogador)
-            {
-                <tr>
-                    <td>@jogador.IdJogador</td>
-                    <td>@jogador.Nome</td>
-                    <td>@jogador.Email</td>
-                    <td>@jogador.Equipe.Nome</td>
-                    <td>
-                        <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
-                    </td>
-                    <td>
-                        <a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
-                    </td>
-                    <td>
-                        <a asp-area="" asp-controller="Jogador" asp-action="Excluir"
-                            asp-route-id="@jogador.IdJogador">Excluir</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+            </form>
+
+            <!-- TABELA CADASTRO DE EQUIPES -->
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Nome</th>
+                        <th>Email</th>
+                        <th>&spades;</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (Jogador jogador in ViewBag.Jogador)
+                    {
+                        <tr>
+                            <td>@jogador.IdJogador</td>
+                            <td>@jogador.Nome</td>
+                            <td>@jogador.Email</td>
+                            <td>@jogador.Equipe!.Nome</td>
+                            <td>
+                                <img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
+                            </td>
+                            <td>
+                                <a asp-area="" asp-controller="Jogador" asp-action="Editar"
+                                    asp-route-id="@jogador.IdJogador">Editar</a>
+                            </td>
+                            <td>
+                                <a asp-area="" asp-controller="Jogador" asp-action="Excluir"
+                                    asp-route-id="@jogador.IdJogador">Excluir</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </section>
+    </main>
 }
+@* <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
+<div>
+<label for="">Nome</label>
+<input type="text" name="Nome" required>
+</div>
+
+<div>
+<label for="">Email</label>
+<input type="text" name="Email" required>
+</div>
+
+<div>
+<label for="">Senha</label>
+<input type="password" name="Senha" required>
+</div>
+
+<label for="">Equipe</label>
+<select name="Equipe" id="">
+@foreach (Equipe equipe in ViewBag.Equipe)
+{
+<option>@equipe.Nome</option>
+}
+</select>
+
+<button type="submit" value="Upload">Cadastrar</button>
+</form>
+
+<table class="table table-striped table-responsive">
+<thead>
+<th>ID</th>
+<th>Nome</th>
+<th>Email</th>
+<th>Equipe</th>
+<th>Imagem</th>
+<th>Editar</th>
+<th>Excluir</th>
+</thead>
+
+<tbody>
+@foreach (Jogador jogador in ViewBag.Jogador)
+{
+<tr>
+<td>@jogador.IdJogador</td>
+<td>@jogador.Nome</td>
+<td>@jogador.Email</td>
+<td>@jogador.Equipe!.Nome</td>
+<td>
+<img src="/img/Equipes/@jogador.Equipe.Imagem" width="50px" height="50px" alt="">
+</td>
+<td>
+<a asp-area="" asp-controller="Jogador" asp-action="Editar" asp-route-id="@jogador.IdJogador">Editar</a>
+</td>
+<td>
+<a asp-area="" asp-controller="Jogador" asp-action="Excluir"
+asp-route-id="@jogador.IdJogador">Excluir</a>
+</td>
+</tr>
+}
+</tbody>
+</table> *@
