--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -67,7 +67,7 @@
     <section class="noticias">
         <div class="container-grid noticias-flex">
             <div>
-                <h2>Notícias</h2>
+                <h2 id="noticia">Notícias</h2>
                 <hr>
             </div>
 
