--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
                     <nav>
 
                         <a href="~/">Início</a>
-                        <a href="#">Notícias</a>
+                        <a href="~/#noticia">Notícias</a>
 
                         @if (ViewBag.Login != null)
                         {
