--- a/Views/equipe/Edit.cshtml
+++ b/Views/equipe/Edit.cshtml
@@ -1,12 +1,23 @@
-@Model Equipe
+@model Equipe
 
 @{
     ViewData["Title"] = "Edit";
 }
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="~/css/reset-and-basics.css">
+    <link rel="stylesheet" href="~/css/equipes.css">
+</head>
+
 <h1>Edicao de Equipe</h1>
 
-<form method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
+<form class="frm-cad-equipe" method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
     <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
 
     <label for="">Nome</label>
@@ -17,3 +28,4 @@
 
     <button type="submit">Atualizar</button>
 </form>
+
