--- a/Views/equipe/Index.cshtml
+++ b/Views/equipe/Index.cshtml
@@ -49,7 +49,7 @@ else
                         <th>Id</th>
                         <th>Nome</th>
                         <th>Foto</th>
-                        <th>&spades;</th>
+                        <th>Acoes</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -64,11 +64,10 @@ else
                             </td>
                             <td>
                                 <a asp-area="" asp-controller="Equipe" asp-action="Excluir"
-                                    asp-route-id="@equipe.IdEquipe">Excluir</a>
-                            </td>
-                            <td>
+                                    asp-route-id="@equipe.IdEquipe"><img class="yellow-trash" src="~/assets/trash.png" alt=""></a>
+
                                 <a asp-area="" asp-controller="Equipe" asp-action="Editar"
-                                    asp-route-id="@equipe.IdEquipe">Editar</a>
+                                    asp-route-id="@equipe.IdEquipe"><img  class="green-play" src="~/assets/edit.svg" alt=""></a>
                             </td>
                         </tr>
                     }
@@ -78,43 +77,6 @@ else
     </main>
 </body>
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 @* <form method="post" action='@Url.Action("Cadastrar")' enctype="multipart/form-data">
 <div>
