--- a/Views/equipe/Edit.cshtml
+++ b/Views/equipe/Edit.cshtml
@@ -15,9 +15,29 @@
     <link rel="stylesheet" href="~/css/equipes.css">
 </head>
 
-<h1>Edicao de Equipe</h1>
+    <main>
+        <section class="container-grid cadastro-equipes">
+            <form class="frm-cad-equipe" method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
+                <div class="cadequipe-titulo">
+                    <h1>Editando Equipe</h1>
+                    <hr>
+                </div>
 
-<form class="frm-cad-equipe" method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
+
+                <input class="campo-entrada" type="text" placeholder="Digite o novo nome da equipe:" name="Nome" 
+                    required>
+                <label class="foto" for="foto-file">
+                    Nenhuma imagem selecionada...
+                    <input type="file" id="foto-file" name="Imagem" accept="image/png, image/jpeg" value="@ViewBag.Equipe.Nome">
+                </label>
+
+                <button type="submit">Atualizar</button>
+
+            </form>
+        </section>
+    </main>
+
+@* <form class="frm-cad-equipe" method="post" action='@Url.Action("Atualizar")' enctype="multipart/form-data">
     <input type="hidden" name="IdEquipe" value="@ViewBag.Equipe.IdEquipe">
 
     <label for="">Nome</label>
@@ -27,5 +47,5 @@
     <input type="file" name="Imagem" value="@ViewBag.Equipe.Imagem">
 
     <button type="submit">Atualizar</button>
-</form>
+</form> *@
 
